s/BN_CLASSIFY/BG_CLASSIFY/g
        plane.h moved from libbn to libbg [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/plot3\.h/\1bview\/plot3.h/g
        moved plot3.h header [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/vert_tree\.h/\1bg\/vert_tree.h/g
        moved vert_tree.h header [7.32]
s/bn_vert_tree/bg_vert_tree/g
        moved vert_tree to libbg [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/vectfont\.h/\1bview\/vectfont.h/g
        moved vertfont.h header to bview[7.32]
s/ID_MATERIAL/ID_COLORTAB/g
        renamed to make room for material objects [7.32]
s/GED_OK/BRLCAD_OK/g
s/GED_ERROR/BRLCAD_ERROR/g
s/GED_HELP/BRLCAD_HELP/g
s/GED_MORE/BRLCAD_MORE/g
s/GED_UNKNOWN/BRLCAD_UNKNOWN/g
s/bu_whereis\(/bu_whence\(/g
s/bu_which\(/bu_whence\(/g
s/rt_gettree_muves\(/rt_gettrees_and_attrs\(/g

7.36
----
s/V3DIR_FROM_AZEL\(/bn_vec_ae\(/g
s/AZEL_FROM_V3DIR\([[:space:]]*([^,]*),[[:space:]]*([^,]*),/bn_ae_vec\(&\1, &\2/g

7.38
----
s/bg_polygon_triangulate/bg_poly_triangulate/g
s/bg_nested_polygon_triangulate/bg_nested_poly_triangulate/g
s/OP_NMG_TESS/OP_TESS/g
s/tree_nmgregion/tree_tessellation/g
s/nmg_booltree_leaf_tess/rt_booltree_leaf_tess/g
s/-ghosting-intensity/-ghost-intensity/g
        rtwizard option simplified [7.38]
s/pl_mat_idn/MAT_IDN/g
s/pl_mat_zero/MAT_ZERO/g
s/pl_mat_copy/MAT_COPY/g
s/ambSlow=[0-9]*//g

7.40
----
s/bv_mesh_lod_custom_key/bu_data_hash/g
s/x/solid_report/g
s/db_search\(/db_search_old\(/g
s/Orca_hash_tbl/rti_udata/g
s/RT_GET_VLIST\(/BV_GET_VLIST\(&rt_vlfree, /g
s/RT_FREE_VLIST\(/BV_FREE_VLIST\(&rt_vlfree, /g
s/RT_ADD_VLIST\(/BV_ADD_VLIST\(&rt_vlfree, /g
s/RT_VLIST_SET_DISP_MAT\(/BV_VLIST_SET_DISP_MAT\(&rt_vlfree, /g
s/RT_VLIST_SET_MODEL_MAT\(/BV_VLIST_SET_MODEL_MAT\(&rt_vlfree, /g
s/RT_VLIST_SET_POINT_SIZE\(/BV_VLIST_SET_POINT_SIZE\(&rt_vlfree, /g
s/RT_VLIST_SET_LINE_WIDTH\(/BV_VLIST_SET_LINE_WIDTH\(&rt_vlfree, /g
s/bu_shader_to_list\(/rt_shader_to_list\(/g
s/bu_shader_to_key_eq\(/rt_shader_to_key_eq\(/g